--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Adopt Me!</title>
 </head>
 <body>
-  
+  <div id='root'>not rendered</div>
+  <script scr="https://unpkg.com/react@16.8.4/umd/react.development.js"></script>
+  <script scr="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script>
 </body>
 </html>
