--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,9 @@
 </head>
 <body>
   <div id='root'>not rendered</div>
-  <script scr="https://unpkg.com/react@16.8.4/umd/react.development.js"></script>
-  <script scr="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script>
-  <script>
-    const App = () => {
-      return React.createElement(
-        "div",
-        {},
-        React.createElement("h1", {}, "Adopt Me")
-      )
-    }
-    ReactDOM.render(React.createElement(App))
+  
+  <script src="./App.js">
+   
   </script>
 </body>
 </html>
